--- a/layout/jorg/header.ejs
+++ b/layout/jorg/header.ejs
@@ -2,7 +2,7 @@
 	<div class="container">
 	<a href="<%- config.root %>">
 		<div class="logo-gutter">
-    		<h1 class="page-title"><span class="logo"></span><%- config.title %></h1>
+    		<div class="page-title"><span class="logo"></span><%- config.title %></div>
     	</div>
 	</a>
 	</div>
