--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -1,4 +1,14 @@
 <!doctype html>
+<!-- 
+	Hi There, code crawler.  
+
+	Made with Hexo.io. 
+	Design and content (c) Jorg, except for the little Jorgies in the
+	header and the About page. Turns out the Hipster Character Generator
+	found at http://irmirx.deviantart.com/art/Hipster-Dress-Up-Game-252088708
+	makes little avaters who look **exactly** like me. Uncanny. 
+	Made by http://irmirx.deviantart.com/, props. 
+-->
 <!--[if lt IE 8]> <html class="no-js ie7 oldie" lang="en"> <![endif]-->
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if IE 9]>    <html class="no-js ie9 oldie" lang="en"> <![endif]-->
