--- a/layout/jorg/head.ejs
+++ b/layout/jorg/head.ejs
@@ -1,5 +1,9 @@
 <%
   var title = page.title;
+  var descr = 'Jorg Thuijls Developer Blog'
+  if(typeof page.excerpt !== 'undefined') {
+    descr += ' | ' + page.excerpt.replace(/<(?:.|\n)*?>/gm, '');
+  }
 
   if (is_archive()){
     title = 'Archives';
@@ -19,7 +23,7 @@
   <meta charset=utf-8 />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
-  <meta name="description" content="<%- config.subtitle %>" />
+  <meta name="description" content="<%- descr %>" />
   <meta name="HandheldFriendly" content="True" />
   <meta name="MobileOptimized" content="320" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
